Do not show fingerprint setup UI in Public Session.

Manuall check that fingerprint UI shows during user sign in.
      Run wizard_controller_browser_tests.

Bug: 882487
Test: Manuall check that fingerprint UI does not show in Demo Mode.
Change-Id: I2b3e25f53b66194aca5a76285e8bbd4c6c7c2879
Reviewed-on: https://chromium-review.googlesource.com/1216808
Reviewed-by: Xiaoyin Hu <xiaoyinh@chromium.org>
Reviewed-by: Alexander Alekseev <alemate@chromium.org>
Commit-Queue: Aga Wronska <agawronska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590125}
Former-commit-id: 1b7538366e954c27504a8547b8b9a7c105f1970a